--- a/ui-ngx/src/app/modules/home/pages/testing/testing.component.html
+++ b/ui-ngx/src/app/modules/home/pages/testing/testing.component.html
@@ -17,8 +17,8 @@
           (click)="onEntityAction($event, 'makePublic')"
           [fxShow]="!isEdit && deviceScope === 'tenant' && !isAssignedToCustomer(entity) && !entity?.customerIsPublic">
     {{'device.make-public' | translate }}
-  </button>
-  <button mat-raised-button color="primary"
+  </button> -->
+  <!-- <button mat-raised-button color="primary"
           [disabled]="(isLoading$ | async)"
           (click)="onEntityAction($event, 'assignToCustomer')"
           [fxShow]="!isEdit && deviceScope === 'tenant' && !isAssignedToCustomer(entity)">
@@ -35,14 +35,14 @@
           (click)="onEntityAction($event, 'manageCredentials')"
           [fxShow]="!isEdit">
     {{ (deviceScope === 'customer_user' ? 'device.view-credentials' : 'device.manage-credentials') | translate }}
-  </button>
+  </button> -->
   <button mat-raised-button color="primary" fxFlex.xs
           [disabled]="(isLoading$ | async)"
           (click)="onEntityAction($event, 'delete')"
           [fxShow]="!hideDelete() && !isEdit">
     {{'device.delete' | translate }}
   </button>
-  <div fxLayout="row" fxLayout.xs="column">
+  <!-- <div fxLayout="row" fxLayout.xs="column">
     <button mat-raised-button
             ngxClipboard
             (cbOnSuccess)="onDeviceIdCopied($event)"
@@ -58,52 +58,76 @@
       [credentials$]="deviceCredentials$"
       [deviceId]="entity?.id">
     </tb-copy-device-credentials>
-  </div>
+  </div> -->
 </div>
 <div class="mat-padding" fxLayout="column">
-  <mat-form-field class="mat-block"
+  <!-- <mat-form-field class="mat-block"
                   [fxShow]="!isEdit && isAssignedToCustomer(entity)
                               && !entity?.customerIsPublic && deviceScope === 'tenant'">
     <mat-label translate>device.assignedToCustomer</mat-label>
     <input matInput disabled [ngModel]="entity?.customerTitle">
-  </mat-form-field>
-  <div class="tb-small" style="padding-bottom: 10px; padding-left: 2px;"
+  </mat-form-field> -->
+  <!-- <div class="tb-small" style="padding-bottom: 10px; padding-left: 2px;"
        [fxShow]="!isEdit && entity?.customerIsPublic && (deviceScope === 'customer' || deviceScope === 'tenant')">
     {{ 'device.device-public' | translate }}
-  </div>
+  </div> -->
   <form [formGroup]="entityForm">
     <fieldset [disabled]="(isLoading$ | async) || !isEdit">
       <mat-form-field class="mat-block">
-        <mat-label translate>device.name</mat-label>
-        <input matInput formControlName="name" required>
+        <mat-label >Sensor</mat-label>
+        <input matInput formControlName="name" value="asdfsafsdf" required>
         <mat-error *ngIf="entityForm.get('name').hasError('required')">
           {{ 'device.name-required' | translate }}
         </mat-error>
       </mat-form-field>
-      <tb-device-profile-autocomplete
+
+      <mat-form-field class="mat-block">
+        <mat-label>SensorType</mat-label>
+        <input matInput formControlName="sensorType" required>
+        <mat-error *ngIf="entityForm.get('sensorType').hasError('required')">
+          {{ 'device.name-required' | translate }}
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="mat-block">
+        <mat-label >Model</mat-label>
+        <input matInput formControlName="model" required>
+        <mat-error *ngIf="entityForm.get('model').hasError('required')">
+          {{ 'device.name-required' | translate }}
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="mat-block">
+        <mat-label >Protocol</mat-label>
+        <input matInput formControlName="protocol" required>
+        <mat-error *ngIf="entityForm.get('protocol').hasError('required')">
+          {{ 'device.name-required' | translate }}
+        </mat-error>
+      </mat-form-field>
+      <!-- <tb-device-profile-autocomplete
         [selectDefaultProfile]="isAdd"
         required
         formControlName="deviceProfileId"
         (deviceProfileUpdated)="onDeviceProfileUpdated()"
         (deviceProfileChanged)="onDeviceProfileChanged($event)">
-      </tb-device-profile-autocomplete>
-      <mat-form-field class="mat-block">
+      </tb-device-profile-autocomplete> -->
+      <!-- <mat-form-field class="mat-block">
         <mat-label translate>device.label</mat-label>
         <input matInput formControlName="label">
-      </mat-form-field>
-      <tb-device-data
+      </mat-form-field> -->
+      <!-- <tb-device-data
         formControlName="deviceData"
         required>
-      </tb-device-data>
+      </tb-device-data> -->
       <div formGroupName="additionalInfo" fxLayout="column">
         <div fxLayout="row" fxLayout.xs="column" style="padding-bottom: 16px;">
-          <mat-checkbox fxFlex.gt-sm="30" fxFlex formControlName="gateway">
+          <!-- <mat-checkbox fxFlex.gt-sm="30" fxFlex formControlName="gateway">
             {{ 'device.is-gateway' | translate }}
-          </mat-checkbox>
-          <mat-checkbox fxFlex *ngIf="entityForm.get('additionalInfo.gateway').value"
+          </mat-checkbox> -->
+          <!-- <mat-checkbox fxFlex *ngIf="entityForm.get('additionalInfo.gateway').value"
                         formControlName="overwriteActivityTime">
             {{ 'device.overwrite-activity-time' | translate }}
-          </mat-checkbox>
+          </mat-checkbox> -->
         </div>
         <mat-form-field class="mat-block">
           <mat-label translate>device.description</mat-label>
@@ -111,5 +135,5 @@
         </mat-form-field>
       </div>
     </fieldset>
-  </form> -->
+  </form>
 </div>
