--- a/ui-ngx/src/app/modules/home/components/wizard/testing-wizard-dialog.component.html
+++ b/ui-ngx/src/app/modules/home/components/wizard/testing-wizard-dialog.component.html
@@ -151,10 +151,10 @@
                 {{ 'device.overwrite-activity-time' | translate }}
               </mat-checkbox>
             </div> -->
-            <mat-form-field class="mat-block">
+            <!-- <mat-form-field class="mat-block">
               <mat-label translate>device.description</mat-label>
               <textarea matInput formControlName="description" rows="2"></textarea>
-            </mat-form-field>
+            </mat-form-field> -->
           </fieldset>
         </form>
       </mat-step>
